# funveil

./: .clippy.toml  .funveil_config  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  BUGS.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DO_NEXT.md  Dockerfile  FUNVEIL.md  ISSUE.md  LANGUAGE_SUPPORT_PLAN.md  MUTATION_TESTING.md  Makefile  PLAN.md  README.md  SPEC.md  STATUS.md  WHAT_WE_DID.md  build.rs  coverage_report.py  deny.toml  pyproject.toml  rustfmt.toml  tarpaulin-report.json
.cargo/: mutants.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  mutants.yml  release.yml
docs/: COVERAGE.md  DESIGN_INTELLIGENT_VEILING.md  GVISOR.md  LANGUAGE_FEATURES.md  TUTORIAL.md
e2e/: Dockerfile  docker-compose.yml  run-e2e.sh  run-gvisor-smoke.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config.rs  fuzz_patch_parser.rs  fuzz_tree_sitter.rs  fuzz_types.rs  fuzz_veil_roundtrip.rs
patches/: tree-sitter-markdown-fork-wasm.patch
scripts/: patch-wasm-deps.sh
scripts/hooks/: check-badges.sh  rebase-on-main.sh  strip-ai-attribution.sh
specs/: algorithms.md  commands.md  config.md  patch.md  patterns.md  storage.md  veil-format.md
src/: budget.rs  cas.rs  checkpoint.rs  commands.rs  config.rs  doctor.rs  error.rs  history.rs  lib.rs  logging.rs  main.rs  metadata.rs  output.rs  perms.rs  types.rs  update.rs  veil.rs
src/analysis/: cache.rs  call_graph.rs  entrypoints.rs  mod.rs
src/parser/: mod.rs  tree_sitter_parser.rs
src/parser/languages/: css.rs  go.rs  html.rs  markdown.rs  mod.rs  typescript.rs  xml.rs  zig.rs
src/patch/: grammar.pest  manager.rs  mod.rs  parser.rs
src/strategies/: header.rs  level.rs  mod.rs
tasks/: task-002-fix-partial-veil-reconstruction.md  task-014-to-017-dead-code-and-architecture.md
tasks/done/: task-001-unimplemented-cli-commands.md  task-003-consolidate-is-veiled-functions.md  task-004-add-error-handling-tests.md  task-005-add-missing-test-coverage.md
tests/: bdd.rs  cli_test.rs  commands.rs  e2e_smoke_test.rs  integration_test.rs  stress_test.rs
tests/common/: mod.rs
tests/features/: budget_mode.feature  layered_disclosure.feature  metadata.feature  physical_removal.feature  query_unveiling.feature
