[package]
name = "funveil"
version = "0.1.0"
edition = "2021"
authors = ["e6qu"]
license = "AGPL-3.0-only"
description = "A lightweight tool for controlling file visibility in AI agent workspaces"
repository = "https://github.com/e6qu/funveil"

[[bin]]
name = "fv"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter parsing for intelligent veiling
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-hcl = "1.1"
tree-sitter-yaml = "0.7"
tree-sitter-go = "0.25"
streaming-iterator = "0.1"

# Graph algorithms for call graph analysis
petgraph = "0.6"

# Caching (binary serialization)
postcard = { version = "1.0", features = ["alloc"] }

# Parallel processing (optional but recommended)
rayon = "1.8"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
