[package]
name = "funveil"
version = "0.1.0"
edition = "2021"
authors = ["e6qu"]
license = "AGPL-3.0-only"
description = "A lightweight tool for controlling file visibility in AI agent workspaces"
repository = "https://github.com/e6qu/funveil"

[[bin]]
name = "fv"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.12"
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
walkdir = "2.5"
ignore = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Tree-sitter parsing for intelligent veiling
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-hcl = "1.1"
tree-sitter-yaml = "0.7"
tree-sitter-go = "0.25"
tree-sitter-zig = "1.1"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-xml = "0.7"
tree-sitter-markdown-fork = "0.7"
streaming-iterator = "0.1"

# Graph algorithms for call graph analysis
petgraph = "0.8"

# Caching (binary serialization)
postcard = { version = "1.1", features = ["alloc"] }

# Parallel processing (optional but recommended)
rayon = "1.11"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt", "time"] }
tracing-appender = "0.2"
rand = "0.8"

# PEG parser for patch formats
pest = "2.8"
pest_derive = "2.8"

# JSON output for CLI ergonomics
serde_json = "1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ureq = "3"

[dev-dependencies]
rstest = "0.25"
tempfile = "3.26"
assert_cmd = "2.1"
predicates = "3.1"
cucumber = "0.21"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

# Faster incremental builds for mutation testing (no debug symbols)
[profile.mutants]
inherits = "test"
debug = "none"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[test]]
name = "bdd"
harness = false

[build-dependencies]
cc = "1.2.56"
